--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -4,14 +4,18 @@
 {% url 'login' as login_url %}
 {% url 'logout' as logout_url %}
 {% url 'register' as register_url %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+{% load static %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
   <div class='container'>
-    <a class="navbar-brand" href="{{ home_url }}">
+    {% comment %} <a class="navbar-brand" href="{{ home_url }}">
       <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
       {% if nome_da_marca %} 
       {{ nome_da_marca }} 
       {% else %} C&oacute;digo Fluente eCommerce 
       {% endif %}
+    </a> {% endcomment %}
+    <a class="navbar-brand" href="{{ home_url }}">
+      <img src="{% static 'img/logo3.png' %}" width="50" height="50" class="d-inline-block align-top ml-1 mb-0 mt-0" alt="" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -19,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if request.path == home_url %} active {% endif %}">
-          <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{ home_url }}">Página Inicial <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item {% if request.path == contact_url %} active {% endif %}">
           <a class="nav-link" href="{{ contact_url }}">Contato</a>
@@ -29,17 +33,17 @@
         </li>
         {% if request.user.is_authenticated %}
         <li class="nav-item {% if request.path == login_url %} active {% endif %}"> 
-          <a class="nav-link" href="{{ logout_url }}">Logout</a> 
+          <a class="nav-link" href="{{ logout_url }}">Sair</a> 
         </li>
         {% else %}
         <li class="nav-item {% if request.path == login_url %} active {% endif %}">
-          <a class="nav-link" href="{{ login_url }}">Login</a>
+          <a class="nav-link" href="{{ login_url }}">Logar</a>
         </li>
         <li class="nav-item {% if request.path == register %} active {% endif %}"> 
-          <a class="nav-link" href="{{ register_url }}">Registrar-se</a> 
+          <a class="nav-link" href="{{ register_url }}">Registre-se</a> 
         </li>
       {% endif %}
-        <li class="nav-item dropdown">
+        {% comment %} <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown link
           </a>
@@ -48,7 +52,7 @@
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
+        </li> {% endcomment %}
       </ul>
       {% include 'search/snippets/search-form.html' %}
     </div>
