--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -15,13 +15,13 @@
 		
     </div> {% endcomment %}
     
-	<div class="row">
+	{% comment %} <div class="row">
 		<img src="{% static 'img/logo.jpeg' %}" style="width: 15%", "display: block", "margin-left: auto", "margin-right: auto"; />
-	</div>	
+	</div>	 {% endcomment %}
 
 	<div class='row'>
 		<div class='col'>
-		<img src="{% static 'img/ecommerce.png' %}" style="width: 80%"; />
+		<img src="{% static 'img/ecommerce2.jpg' %}" style="width: 96%"; />
 		{% comment %} <p>{{ content }}</p> {% endcomment %}
 		</div>
 	</div>
