--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -5,8 +5,8 @@
     <div class='row'>
         <div class='col'>
             <h1>{{ object.title }}</h1>
-            {{ object.timestamp|timesince }} atrás
-            <h3>{{ "Um título qualquer"|title }}</h3>
+            {% comment %} {{ object.timestamp|timesince }} atrás {% endcomment %}
+            {% comment %} <h3>{{ "Um título qualquer"|title }}</h3> {% endcomment %}
             {{ object.description|linebreaks }} <br/>
             {% if object.image %}
                 <img src='{{ object.image.url }}' class='img-fluid'/>
