--- a/search/templates/search/snippets/search-form.html
+++ b/search/templates/search/snippets/search-form.html
@@ -1,8 +1,8 @@
 <form method='GET' action='{% url "search:query" %}' class="form my-2 my-lg-0">
   <div class="input-group">
-    <input class="form-control" type="search" placeholder="Search" name='q' aria-label="Search" value='{{ request.GET.q }}'>
-    <span class="input-group-btn">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+    <input class="form-control" type="search" placeholder="Digite pra pesquisa..." name='q' aria-label="Search" value='{{ request.GET.q }}'>
+    <span class="input-group-btn mr-5">
+      <button class="btn btn-outline-light ml-1" type="submit">Pesquisar</button>
     </span>
   </div>
 </form>
