--- a/static_cdn/static_root/css/main.css
+++ b/static_cdn/static_root/css/main.css
@@ -2,9 +2,9 @@ body {
     color: #fff;
 }
 
-.logo {
+/* .logo {
     width: 20%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+} */
