--- a/templates/contact/view.html
+++ b/templates/contact/view.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %} 
-    <div class='text-center'>
+    <div class='ml-4'>
         <h1>{{ title }}</h1>
     </div>
     <div class='container'>
@@ -11,7 +11,7 @@
                 <div class='col-sm-6 col-12'>
                     <form method='POST'> {% csrf_token %}
                         {{ form }}
-                        <button type='submit' class='btn btn-default'>Enviar</button>
+                        <button type='submit' class='btn btn-outline-secondary mt-2' >Enviar</button>
                     </form>
                 </div>
             </div>
