--- a/templates/auth/logout.html
+++ b/templates/auth/logout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <div class='text-center'>
-    <h2>{{ content }}</h2>
+    <h2 class="mt-5">{{ content }}</h2>
 </div>
 {% endblock %}
