--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<form method='POST'> 
+<form method='POST' style="width: 50%" class="ml-5 mt-5"> 
     {% csrf_token %}
     {{ form }}
-    <button type='submit' class='btn btn-default'>Enviar</button>
+    <button type='submit' class='btn btn-outline-black mt-3'>Enviar</button>
 </form>
 {% endblock %}
