--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -9,7 +9,7 @@
             <h2 class="card-title">R$ {{ object.price }}</h2>
                 {{ object.description|linebreaks }} <br/>
             {% if object.image %}
-                <img src='{{ object.image.url }}' style="width: 25rem; />
+                <img src='{{ object.image.url }}' style="width: 25rem;" />
             {% endif %}
 
         </div>
