--- a/src/products/templates/products/snippets/card.html
+++ b/src/products/templates/products/snippets/card.html
@@ -2,7 +2,7 @@
 <div class="card mt-2" style="width: 14rem;">
     {% if instance.image %}
         <a href="{{ instance.get_absolute_url }}">
-            <img src="{{ instance.image.url }}" class="card-img-top" alt="{{ instance.title }} logo">
+            <img src="{{ instance.image.url }}" class="card-img-top" style="width: 100%;" alt="{{ instance.title }} logo">
         </a>
     {% endif %}
     <div class="card-body">
